# g-m3l0ft_training

./: .gitignore  CMakelists.txt  Feedback-binh.buidang.txt  README.md
AndroidTrainingFramework-AF/: .gitignore  CHANGELOG.txt  CMakeLists.txt  ReadMe.txt  StartBuildConfigurator.bat
AndroidTrainingFramework-AF/prj/: AndroidTrainingFramework.sln
AndroidTrainingFramework-AF/prj/Android/: Android.vcxproj  Android.vcxproj.filters
AndroidTrainingFramework-AF/prj/Android/j2a/: Controller.j2a
AndroidTrainingFramework-AF/prj/Android/java/: ESUtilGLSurfaceView.java  OpenGLRenderer.java
AndroidTrainingFramework-AF/prj/Android/res/values/: strings.xml
AndroidTrainingFramework-AF/prj/GameSpecific/: GameSpecific.vcxproj  GameSpecific.vcxproj.filters
AndroidTrainingFramework-AF/prj/GameSpecific/Debug/: GameSpecific.idb
AndroidTrainingFramework-AF/prj/Win32/: Win32.vcxproj  Win32.vcxproj.filters
AndroidTrainingFramework-AF/prj/Win32/Debug/: vc141.idb
AndroidTrainingFramework-AF/prj/Win32/Debug/Win32.tlog/: CL.command.1.tlog  (+5 more)
AndroidTrainingFramework-AF/src/: CollisionManager.h  Game.cpp  Game.h  SceneManager.cpp  SceneManager.h  SceneManager.txt  SingleTon.h  define.h
AndroidTrainingFramework-AF/src/entity/: Circle.cpp  Circle.h  Object.cpp  Object.h  Rectangle.cpp  Rectangle.h
AndroidTrainingFramework-AF/src/math/: Vector2.cpp  Vector2.h
AndroidTrainingFramework-AF/src/platform/android/: matrix.cpp  matrix.h  shaderManager.cpp  shaderManager.h
AndroidTrainingFramework-AF/src/platform/win32/: Application.cpp  Application.h  Resource.h  main.cpp  stdafx.cpp
(+68 files in other folders)
